# pulseaudio_device_control

./: LICENSE  README.md  README.rst  pyproject.toml  setup.py
pulseaudio_device_control/: pulseaudio_device_control.py
src/pulseaudio_device_control/: config.py  pulseaudio_device_control.py
